# BLITZ

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  configure.sh  run.sh
Engine/: CMakeLists.txt
Engine/src/: blitz.h  blpch.h
Engine/src/Blitz/core/: application.cpp  application.h  core.h  entryPoint.h  window.h
Engine/src/Blitz/core/logger/: logger.cpp  logger.h
Engine/src/Blitz/events/: applicationEvent.h  event.h  keyEvent.h  mouseEvent.h
Engine/src/Blitz/graphics/: shader.cpp  texture.cpp  texture.h  window.cpp  window.h
Engine/src/Blitz/graphics/buffers/: buffer.cpp  indexBuffer.cpp  vertexArray.cpp  vertexArray.h
Engine/src/Blitz/imgui/: imguiLayer.cpp  imguiLayer.h
Engine/src/Blitz/layers/: layer.cpp  layer.h  layerStack.cpp  layerStack.h
Engine/src/Blitz/math/: math.h
Engine/src/Blitz/math/matrices/: mat3.cpp  mat3.h  mat4.cpp  mat4.h
Engine/src/Blitz/math/vectors/: vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
Engine/src/Blitz/utils/: fileUtils.h
Engine/src/Platform/: openWindow.cpp  openWindow.h
Engine/src/Platform/opengl/: imguiOpenglRenderer.cpp
Engine/src/core/: application.cpp  application.h  core.h  entryPoint.h
Engine/src/core/logger/: logger.cpp  logger.h
Engine/src/graphics/: shader.cpp  shader.h  texture.cpp  window.cpp  window.h
Engine/src/graphics/buffers/: buffer.h  indexBuffer.h  vertexArray.h
Engine/src/logger/: logger.cpp
Engine/src/math/: math.h
Engine/src/math/matrices/: mat4.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: app.cpp
scripts/: build.sh  configure.sh  run.sh
src/: main.cpp
src/assets/shaders/: basic.frag  basic.vert
src/graphics/: shader.cpp  texture.cpp  texture.h  window.cpp  window.h
src/graphics/buffers/: buffer.cpp  vertexArray.cpp
src/logger/: logger.h
src/math/matrices/: mat4.h
src/math/vectors/: vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
src/shaders/: basic.frag  basic.vert
src/utils/: fileUtils.h
